cssの細かいとこ調整色とか

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -65,9 +65,7 @@
 					{% endfor %}
 				</ul>
 				<p class="copyright">
-					<a href="https://cloudcannon.com/">
-						Template by CloudCannon
-					</a>
+					<img width="100px" src ="{{ site.baseurl }}/images/logo/boxlogo.svg" />
 				</p>
 			</div>
 		</footer>
