タグを使えるようにした。 `_posts`したのmdに`tag`または`tags`を追加すると、`jekyll-archives`で各タグのページを生成する。 タグのレイアウトは`_layouts/tag_archive.html` カテゴリのレイアウトは`_layouts/category_archive.html` タグのスタイルは`blog-tags`としてある

--- a/_includes/post-title.html
+++ b/_includes/post-title.html
@@ -4,5 +4,10 @@
 			<a href="{{ site.baseurl }}/category/{{ category | slugify }}/">{{ category | capitalize }}</a>
 		</span>
 	{% endfor %}
+	{% for tag in include.post.tags %}
+		<span class="blog-filter blog-tags">
+			<a href="{{ site.baseurl }}/tag/{{ tag | slugify }}/">{{ tag | capitalize }}</a>
+		</span>
+	{% endfor %}
 	<span class="post-date">{{ include.post.date | date: "%B %d, %Y" }}</span>
 </p>
