--- a/_sass/blog.scss
+++ b/_sass/blog.scss
@@ -127,6 +127,24 @@
 	}
 }
 
+.blog-tags {
+	text-align: center;
+	a {
+		background: transparent;
+		padding: 3px 5px;	
+		font-size: .8em;
+		border-radius: 5px;
+		color: #888;
+		transition: .2s ease-in-out;
+
+		&:hover {
+			color: #555;
+			text-decoration: none;
+		}
+	}
+}
+
+
 .change-category {
 	margin: 0;
 	padding: 30px 0;
