フッターロゴの位置を調整した

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -64,9 +64,11 @@
 						</li>
 					{% endfor %}
 				</ul>
-				<p class="copyright">
+			</div>
+			<div class="container" style="clear:left; width: 100%;">
+				<div style="padding: 5em 0 5em 0; text-align: center;">
 					<img width="100px" src ="{{ site.baseurl }}/images/logo/boxlogo.svg" />
-				</p>
+				</div>
 			</div>
 		</footer>
 
