行間などCSS調整した

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,6 +13,7 @@
 		<link rel="icon" type="image/png" href="{{ site.baseurl }}/images/favicon.png">
 
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300|Rubik:300">
+		<link rel="stylesheet" href="http://fonts.googleapis.com/earlyaccess/notosansjp.css">
 		<link rel="stylesheet" href="{{ site.baseurl }}/css/screen.css">
 
 		{% if jekyll.environment == 'production' and site.google_analytics_key != '' %}
@@ -64,9 +65,7 @@
 						</li>
 					{% endfor %}
 				</ul>
-			</div>
-			<div class="container" style="clear:left; width: 100%;">
-				<div style="padding: 5em 0 5em 0; text-align: center;">
+				<div class="footer-logo">
 					<img width="100px" src ="{{ site.baseurl }}/images/logo/boxlogo.svg" />
 				</div>
 			</div>
