--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -1,6 +1,7 @@
 $brand-color: #e64c4c;
 
 // Breakpoints
+$mobile: "(min-width: 350px)";
 $tablet: "(min-width: 450px)";
 $mid-point: "(min-width: 620px)";
 $desktop: "(min-width: 768px)";
