アバウトページに分科会の紹介を載せた

--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -4,6 +4,17 @@
 	padding: 0 20px;
 }
 
+.about_contents {
+	h3 {
+		font-size: 2rem;
+		margin-top: 2rem;
+	}
+
+	h4 {
+		font-size: 1.5rem;
+	}
+}
+
 .text-container {
 	max-width: 750px;
 }
