--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
 		<link rel="icon" type="image/png" href="{{ site.baseurl }}/images/favicon.png">
 
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300|Rubik:300">
-		<link rel="stylesheet" href="http://fonts.googleapis.com/earlyaccess/notosansjp.css">
+		<link rel="stylesheet" href="https://fonts.googleapis.com/earlyaccess/notosansjp.css">
 		<link rel="stylesheet" href="{{ site.baseurl }}/css/screen.css">
 
 		{% if jekyll.environment == 'production' and site.google_analytics_key != '' %}
